@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-27T08:12:43Z",
-  "count_outdated" : 169,
-  "uniques_outdated" : 143,
-  "count" : 176,
-  "uniques" : 150,
+  "timestamp" : "2023-08-29T08:14:50Z",
+  "count_outdated" : 170,
+  "uniques_outdated" : 144,
+  "count" : 177,
+  "uniques" : 151,
   "clones" : [
-    {
-      "timestamp": "2023-08-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-17T00:00:00Z",
       "count": 1,
@@ -61,6 +52,15 @@
     },
     {
       "timestamp": "2023-08-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
